--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 	<title>he ai he ai</title>
 <p1><br>
 </p1>
-    <p1>我叫鲁瀚霖</p1>
+<p1>欢迎大家来到我的主页</p1>
+<p1><br>
+</p1>
+    <p1>我叫瀚霖是人</p1>
 <p2><br>
 </p2>
 <p3>My english name is Jerry</p3>
@@ -21,7 +24,10 @@
 <p3><br>
 </p3>
     <p4>不好玩</p4>
-    <p><a href="hahugi.html">&nbsp; 我不玩了再见老师</a></p>
+<p><a href="../../Documents/Hello World/index.html">&nbsp;我不玩了再见老师----反复跳转回到主页</a></p>
+<p><a href="../../Documents/Hello World/hahugi.html">这里又是我唠叨的第二页&nbsp;</a></p>
+<p><a href="../../Documents/Hello World/niganmAI.html">这是AI page&nbsp;</a></p>
+<p><a href="../../Documents/Hello World/lovestory.html">欣赏一下AI generation 爱情文章&nbsp;</a></p>
 <p5>&nbsp;</p5>
 	<p5><br></p5>
 <p6> &nbsp;</p6>
